--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -12,11 +12,7 @@ set(TIMEMORY_PYTHON_BINDINGS @TIMEMORY_USE_PYTHON_BINDING@)
 if(NOT DEFINED @PROJECT_NAME@_DIR)
     set(@PROJECT_NAME@_DIR ${CMAKE_CURRENT_LIST_DIR})
 endif(NOT DEFINED @PROJECT_NAME@_DIR)
-
-set(@PROJECT_NAME@_C_FLAGS @TiMemory_C_FLAGS@)
-set(@PROJECT_NAME@_CXX_FLAGS @TiMemory_CXX_FLAGS@)
-set(@PROJECT_NAME@_C_COMPILE_OPTIONS @TiMemory_C_FLAGS@)
-set(@PROJECT_NAME@_CXX_COMPILE_OPTIONS @TiMemory_CXX_FLAGS@)
+set(TIMEMORY_C_LIBRARY @TIMEMORY_BUILD_C_LIBRARY@)
 
 #------------------------------------------------------------------------------#
 #   Determine install tree or build tree
@@ -71,7 +67,13 @@ if(_TIMEMORY_INSTALL_TREE)
         IMPORTED_LOCATION_DEBUG
         IMPORTED_LOCATION_MINSIZEREL)
 
-    foreach(_LANG C CXX)
+    if(TIMEMORY_C_LIBRARY)
+        set(_LANGUAGES C CXX)
+    else()
+        set(_LANGUAGES CXX)
+    endif()
+
+    foreach(_LANG CXX)
         string(TOLOWER "${_LANG}" _LANG_LOWER)
         foreach(_LOC ${LOCATIONS})
             if(NOT _${_LANG}_LOCATION)
@@ -103,13 +105,16 @@ else() # build tree
         set(@PROJECT_NAME@_PYTHON_DIR "@PROJECT_BINARY_DIR@")
     endif(TIMEMORY_PYTHON_BINDINGS)
 
-    set_property(TARGET @LIBNAME@-c-library
-        PROPERTY IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/TiMemoryBuild.cmake")
-
     set_property(TARGET @LIBNAME@-cxx-library
         PROPERTY IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/TiMemoryBuild.cmake")
 
-    set(PROJECT_DEPENDS @LIBNAME@-c-library @LIBNAME@-cxx-library)
+    set(PROJECT_DEPENDS @LIBNAME@-cxx-library)
+
+    if(TIMEMORY_C_LIBRARY)
+        set_property(TARGET @LIBNAME@-c-library
+            PROPERTY IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/TiMemoryBuild.cmake")
+        list(APPEND PROJECT_DEPENDS @LIBNAME@-c-library)
+    endif()
 
 endif()
 
@@ -137,9 +142,12 @@ endif()
 #------------------------------------------------------------------------------#
 #   TiMemory link target
 #------------------------------------------------------------------------------#
-set(@PROJECT_NAME@_C_LIBRARIES @LIBNAME@-c-library)
 set(@PROJECT_NAME@_CXX_LIBRARIES @LIBNAME@-cxx-library)
 set(@PROJECT_NAME@_LIBRARIES @LIBNAME@-cxx-library)
+if(TIMEMORY_C_LIBRARY)
+    set(@PROJECT_NAME@_C_LIBRARIES @LIBNAME@-c-library)
+    list(APPEND @PROJECT_NAME@_LIBRARIES @LIBNAME@-c-library)
+endif()
 
 
 #------------------------------------------------------------------------------#
@@ -151,9 +159,7 @@ include(FindPackageHandleStandardArgs)
 find_package_handle_standard_args(@PROJECT_NAME@ DEFAULT_MSG
     @PROJECT_NAME@_ROOT_DIR
     @PROJECT_NAME@_INCLUDE_DIRS
-    @PROJECT_NAME@_LIBRARIES
-    @PROJECT_NAME@_C_LIBRARIES
-    @PROJECT_NAME@_CXX_LIBRARIES)
+    @PROJECT_NAME@_LIBRARIES)
 
 if(APPLE)
     set(CMAKE_INCLUDE_SYSTEM_FLAG_${LANG} "-isystem ")
