--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,6 @@ matrix:
             - cmake
             - libpapi-dev
             - papi-tools
-            #- libopenmpi-dev
-            #- openmpi-bin
       env:
         - MATRIX_EVAL="CC=$(which gcc-4.9) && CXX=$(which g++-4.9) && BUILD_TYPE=Debug && BUILD_SHARED=OFF"
     # GCC 5
@@ -135,133 +133,6 @@ matrix:
         - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_TYPE=MinSizeRel && BUILD_SHARED=ON"
     # ------------------------------------------------------------------------ #
     #
-    #   Python 3.5
-    #
-    # ------------------------------------------------------------------------ #
-    # GCC 4.9
-    - os: linux
-      dist: xenial
-      sudo: false
-      python: '3.5'
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - gcc-4.9
-            - g++-4.9
-            - build-essential
-            - cmake
-            - libopenmpi-dev
-            - openmpi-bin
-            - libpapi-dev
-            - papi-tools
-      env:
-        - MATRIX_EVAL="CC=$(which gcc-4.9) && CXX=$(which g++-4.9) && BUILD_TYPE=Debug && BUILD_SHARED=ON"
-    # GCC 5
-    - os: linux
-      dist: xenial
-      sudo: false
-      python: '3.5'
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - gcc-5
-            - g++-5
-            - build-essential
-            - cmake
-            - libopenmpi-dev
-            - openmpi-bin
-            - libpapi-dev
-            - papi-tools
-      env:
-        - MATRIX_EVAL="CC=$(which gcc-5) && CXX=$(which g++-5) && BUILD_TYPE=MinSizeRel && BUILD_SHARED=OFF"
-    # GCC 6
-    - os: linux
-      dist: xenial
-      sudo: false
-      python: '3.5'
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - gcc-6
-            - g++-6
-            - build-essential
-            - cmake
-            - libpapi-dev
-            - papi-tools
-            #- libopenmpi-dev
-            #- openmpi-bin
-      env:
-        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=RelWithDebInfo && BUILD_SHARED=ON"
-    # GCC 7
-    - os: linux
-      dist: xenial
-      sudo: false
-      python: '3.5'
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - gcc-7
-            - g++-7
-            - build-essential
-            - cmake
-            - libopenmpi-dev
-            - openmpi-bin
-            - libpapi-dev
-            - papi-tools
-      env:
-        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && BUILD_TYPE=Release && BUILD_SHARED=OFF"
-    # Clang 4.0
-    - os: linux
-      dist: xenial
-      sudo: false
-      python: '3.5'
-      addons:
-        apt:
-          sources:
-            - llvm-toolchain-xenial-4.0
-            - ubuntu-toolchain-r-test
-          packages:
-            - clang-4.0
-            - clang++-4.0
-            - build-essential
-            - cmake
-            - libopenmpi-dev
-            - openmpi-bin
-            - libpapi-dev
-            - papi-tools
-      env:
-        - MATRIX_EVAL="CC=$(which clang-4.0) && CXX=$(which clang++-4.0) && BUILD_TYPE=Debug && BUILD_SHARED=ON"
-    # Clang 5.0
-    - os: linux
-      dist: xenial
-      sudo: false
-      python: '3.5'
-      addons:
-        apt:
-          sources:
-            - llvm-toolchain-xenial-5.0
-            - ubuntu-toolchain-r-test
-          packages:
-            - clang-5.0
-            - clang++-5.0
-            - build-essential
-            - cmake
-            - libpapi-dev
-            - papi-tools
-            #- libopenmpi-dev
-            #- openmpi-bin
-      env:
-        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_TYPE=MinSizeRel && BUILD_SHARED=OFF"
-    # ------------------------------------------------------------------------ #
-    #
     #   Python 3.6
     #
     # ------------------------------------------------------------------------ #
@@ -362,8 +233,6 @@ matrix:
             - cmake
             - libpapi-dev
             - papi-tools
-            #- libmpich-dev
-            #- mpich
       env:
         - MATRIX_EVAL="CC=$(which clang-4.0) && CXX=$(which clang++-4.0) && BUILD_TYPE=RelWithDebInfo && BUILD_SHARED=ON"
     # Clang 5.0
@@ -415,7 +284,7 @@ install:
     - export SOURCE_DIR=${PWD}
     - export TIMEMORY_VERBOSE=4
     - export TIMEMORY_OUTPUT_TOTAL=1
-    - pip install -U -r requirements.txt
+    #- pip install -U -r requirements.txt
     - mkdir -p build-timemory
     - cd build-timemory
     - export BUILD_DIR=${PWD}
@@ -434,7 +303,7 @@ install:
         -DTIMEMORY_USE_MPI=${USE_MPI}
         -DTIMEMORY_BUILD_TESTING=ON
         -DTIMEMORY_USE_PYTHON_BINDING=OFF
-	-DTIMEMORY_USE_PAPI=ON
+        -DTIMEMORY_USE_PAPI=ON
         -DBUILD_SHARED_LIBS=${BUILD_SHARED}
         ${PWD}/..
     - grep '^[A-Za-z]' CMakeCache.txt | grep -vi advanced
