--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -6,8 +6,6 @@ include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@ConfigVersion.cmake)
 #------------------------------------------------------------------------------#
 #   Settings
 #------------------------------------------------------------------------------#
-set(TIMEMORY_USE_MPI @MPI_FOUND@)
-set(TIMEMORY_EXCEPTIONS @TIMEMORY_EXCEPTIONS@)
 set(TIMEMORY_PYTHON_BINDINGS @TIMEMORY_USE_PYTHON_BINDING@)
 if(NOT DEFINED @PROJECT_NAME@_DIR)
     set(@PROJECT_NAME@_DIR ${CMAKE_CURRENT_LIST_DIR})
@@ -97,13 +95,13 @@ else() # build tree
 
     if(TIMEMORY_PYTHON_BINDINGS)
         list(APPEND @PROJECT_NAME@_INCLUDE_DIR "@PROJECT_SOURCE_DIR@/source/python/pybind11")
-    endif(TIMEMORY_PYTHON_BINDINGS)
+    endif()
 
     set(@PROJECT_NAME@_LIB_DIR "@PROJECT_BINARY_DIR@")
 
     if(TIMEMORY_PYTHON_BINDINGS)
         set(@PROJECT_NAME@_PYTHON_DIR "@PROJECT_BINARY_DIR@")
-    endif(TIMEMORY_PYTHON_BINDINGS)
+    endif()
 
     set_property(TARGET @LIBNAME@-cxx-library
         PROPERTY IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/TiMemoryBuild.cmake")
@@ -124,16 +122,10 @@ foreach(_DIR ${@PROJECT_NAME@_EXTERNAL_INCLUDE_DIRS})
     list(APPEND @PROJECT_NAME@_INCLUDE_DIRS SYSTEM ${_DIR})
 endforeach(_DIR ${@PROJECT_NAME@_EXTERNAL_INCLUDE_DIRS})
 
-#------------------------------------------------------------------------------#
-#   CXX standard
-#------------------------------------------------------------------------------#
-set(@PROJECT_NAME@_CXX_STANDARD @CMAKE_CXX_STANDARD@)
-set(@PROJECT_NAME@_CXX_STANDARD_REQUIRED @CMAKE_CXX_STANDARD_REQUIRED@)
 
 #------------------------------------------------------------------------------#
 #   Definitions
 #------------------------------------------------------------------------------#
-set(@PROJECT_NAME@_DEFINITIONS @TiMemory_DEFINITIONS@)
 set(DYNAMIC_LINK @BUILD_SHARED_LIBS@)
 if(NOT DYNAMIC_LINK AND WIN32)
     list(APPEND @PROJECT_NAME@_DEFINITIONS _TIMEMORY_ARCHIVE)
