--- a/.travis.yml
+++ b/.travis.yml
@@ -302,7 +302,8 @@ install:
         -DPYTHON_EXECUTABLE=$(which python)
         -DTIMEMORY_USE_MPI=${USE_MPI}
         -DTIMEMORY_BUILD_TESTING=ON
-        -DTIMEMORY_USE_PYTHON_BINDING=ON
+        -DTIMEMORY_BUILD_PYTHON=ON
+        -DTIMEMORY_BUILD_C=ON
         -DTIMEMORY_USE_PAPI=ON
         -DBUILD_SHARED_LIBS=${BUILD_SHARED}
         ${PWD}/..
