Fixed hashing + fixed graph storage merge

--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -68,21 +68,21 @@ if(_TIMEMORY_INSTALL_TREE)
     if(TIMEMORY_C_LIBRARY)
         set(_LANGUAGES C CXX)
     else()
-        set(_LANGUAGES CXX)
+        set(_LANGUAGES C)
     endif()
 
-    foreach(_LANG CXX)
+    foreach(_LANG ${_LANGUAGES})
         string(TOLOWER "${_LANG}" _LANG_LOWER)
         foreach(_LOC ${LOCATIONS})
             if(NOT _${_LANG}_LOCATION)
                 get_target_property(_${_LANG}_LOCATION @LIBNAME@-${_LANG_LOWER}-library ${_LOC})
-            endif(NOT _${_LANG}_LOCATION)
+            endif()
         endforeach()
 
         if(_${_LANG}_LOCATION)
             set(@PROJECT_NAME@_${_LANG}_LIBRARY ${_${_LANG}_LOCATION}
                 CACHE INTERNAL "@PROJECT_NAME@ ${_LANG} library")
-        endif(_${_LANG}_LOCATION)
+        endif()
 
         unset(_${_LANG}_LOCATION)
     endforeach()
