--- a/source/timemory/CMakeLists.txt
+++ b/source/timemory/CMakeLists.txt
@@ -6,3 +6,37 @@ endif(WIN32)
 
 set_property(GLOBAL APPEND PROPERTY
     BUILDTREE_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR})
+
+return()
+
+file(GLOB cxx_headers ${CMAKE_CURRENT_LIST_DIR}/*.hpp
+    ${CMAKE_CURRENT_LIST_DIR}/*.icpp)
+
+set(cxx_sources)
+foreach(_SOURCE ${cxx_headers})
+    string(REPLACE "${CMAKE_CURRENT_LIST_DIR}/" "" _SOURCE "${_SOURCE}")
+    list(APPEND cxx_sources ${_SOURCE})
+endforeach()
+message(STATUS "${cxx_sources}")
+
+add_library(${LIBNAME}-cxx-library INTERFACE)
+
+target_include_directories(${LIBNAME}-cxx-library
+    INTERFACE include)
+
+target_link_libraries(${LIBNAME}-cxx-library
+    INTERFACE ${EXTERNAL_LIBRARIES})
+
+#target_include_directories(${LIBNAME}-cxx-library
+#    ${${PROJECT_NAME}_TARGET_INCLUDE_DIRS})
+
+target_compile_definitions(${LIBNAME}-cxx-library
+    INTERFACE ${LIBRARY_COMPILE_DEFINITIONS})
+
+target_sources(${LIBNAME}-cxx-library INTERFACE ${cxx_sources})
+
+#target_compile_options(${LIBRARY_TARGET_NAME}
+#    PUBLIC
+#        $<$<COMPILE_LANGUAGE:C>:${${PROJECT_NAME}_C_FLAGS}>
+#        $<$<COMPILE_LANGUAGE:CXX>:${${PROJECT_NAME}_CXX_FLAGS}>
+#        $<$<COMPILE_LANGUAGE:CUDA>:${${PROJECT_NAME}_CUDA_FLAGS}>)
