fixed unique deletion + PRIVATE compile flags + Win fix + auto out + graph safety + storage deleter
- correctly invoke unique_ptr deleter
- C/CXX compiler flags are PRIVATE
- Windows fix for tv_usec -> tv_nsec
- option for LTO
- env option for enable/disable auto output functionality
- nullptr to node checks for iterator in graph
- Update build settings and options
- Removed -Wall for Windows
- Set clang-tidy to disabled by default

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -96,7 +96,7 @@ macro(BUILD_LIBRARY)
     target_compile_definitions(${LIBRARY_TARGET_NAME}
         PUBLIC ${LIBRARY_COMPILE_DEFINITIONS})
     target_compile_options(${LIBRARY_TARGET_NAME}
-        PUBLIC
+        PRIVATE
             $<$<COMPILE_LANGUAGE:C>:${${PROJECT_NAME}_C_FLAGS}>
             $<$<COMPILE_LANGUAGE:CXX>:${${PROJECT_NAME}_CXX_FLAGS}>)
 
