--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,7 +15,6 @@ build:
 
 platform:
 - x64
-- x86
 
 
 environment:
@@ -35,9 +34,6 @@ matrix:
   exclude:
   - image: Visual Studio 2015
     CPP: latest
-  - image: Visual Studio 2017
-    CPP: latest
-    platform: x86
 
 
 install:
@@ -90,12 +86,9 @@ install:
         $env:TIMEMORY_USE_MPI = "OFF"
       }
       conda update -y -q -n base conda
-      conda install -y -q pip
-      python -m pip install -U pip
+      conda install -y -q pip setuptools scikit-build numpy matplotlib pillow
     }
     # pip installation
-    python -m pip install -U setuptools
-    python -m pip install -U -r requirements.txt
     $env:TIMEMORY_DEBUG = 4
     mkdir "C:\Users\appveyor\CTestTemp"
     $env:TEMP = "C:\Users\appveyor\CTestTemp"
