--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -98,7 +98,7 @@ build_script:
 - mkdir build-timemory
 - cd build-timemory
 - ls "C:\Program Files (x86)\Microsoft SDKs"
-- ls "C:\Program Files\Microsoft MPI"
+- ls "C:\Program Files\"
 - cmake
     -DCMAKE_BUILD_TYPE="%CONFIG%"
     -DCMAKE_INSTALL_PREFIX=..\install-timemory
