PAPI init/destroy updates

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -34,7 +34,6 @@ endif()
 #
 add_subdirectory(ex-c)
 add_subdirectory(ex-cxx-tuple)
-add_subdirectory(ex-cxx-graph)
 add_subdirectory(ex-cxx-overhead)
 
 get_property(LANGUAGES GLOBAL PROPERTY ENABLED_LANGUAGES)
@@ -43,6 +42,7 @@ if("CUDA" IN_LIST LANGUAGES AND CUDA_FOUND)
     add_subdirectory(ex-cuda-event)
 endif()
 
+#add_subdirectory(ex-cxx-graph)
 #add_subdirectory(ex-cxx)
 #if(TIMEMORY_USE_MPI AND MPI_FOUND)
 #    add_subdirectory(ex-cxx-mpi)
